docs: 精简README，更新配置链接到ServerConfig.java